--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     </div>
     <div class="video-container">
       <h3>Region 2: Deforestation Activity</h3>
-      <video id="video2" src="https://drive.google.com/uc?export=download&id=10ciAaUrBoTyC8oRxXjsK2FsGnUe_QGAz" autoplay muted loop></video>
+      <video id="video2" src="https://drive.google.com/file/d/10ciAaUrBoTyC8oRxXjsK2FsGnUe_QGAz/view?usp=drive_link
+👇
+https://drive.google.com/uc?export=download&id=10ciAaUrBoTyC8oRxXjsK2FsGnUe_QGAz
+" autoplay muted loop></video>
       <div class="status" id="status2">Analyzing...</div>
     </div>
   </div>
